# Rstreamer

./: Cargo.toml  Readme.md
.cargo/: config.toml
.github/workflows/: binrelease.yml  build-release.yml 
src/: capture.rs  error.rs  lib.rs  main.rs  server.rs
