[package]
name = "rstreamer"
version = "0.1.0"
edition = "2021"
description = "使用 Rust 编写的流媒体服务器"
authors = ["Dingvero <Dingvero@outlook.com>"]  # 替换为你的名字和邮箱

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nokhwa = { version = "0.10.0-rc.6", features = ["input-native"] }       # 摄像头捕获
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
bytes = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = { version = "0.5.2", features = ["make"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
async-stream = "0.3"
axum = "0.6"
rustc-hash = "2.1.1"
